forgejo/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: forgejo
spec:
  gatewayClassName: traefik
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      hostname: projects.corybuecker.dev
      name: projects-corybuecker-dev
      port: 8000
      protocol: HTTP
