forgejo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  parentRefs:
    - kind: Gateway
      name: forgejo
      namespace: forgejo
  hostnames:
    - projects.corybuecker.dev
  rules:
    - backendRefs:
        - name: forgejo
          namespace: forgejo
          port: 3000
